# gim_viewer

./: .gitignore  AGENTS.md  README.md  cache-implement-plan.md  gim-analysis.md  ifc2dev.md  implement-plan.md  index.html  package-lock.json  package.json  store-schema.md  vite.config.ts  vitest.config.ts  vitest.setup.ts  文件分析.md
.github/workflows/: ci.yml
doc/schema/: cbm.md  dev.md  phm.md  sch.md  sld.md
docs/: GIM文件可视化应用技术报告.docx  README.md  architecture.md  dev-log.md  fragments-cache-design.md  gim_line.md  gim_spec.md  gim_substation.md  known-limitations.md  local_cache.md  logging-and-diagnostics.md  m3-line-gim-mvp.md  m4-b-line-geometry-research.md  m4-b3-catenary-param-validation.md  m4-b3b-span-grouping-validation.md  m4-research.md  m4-roadmap.md  m4-sprint1-summary.md  manual-acceptance-checklist.md  map-basemap-evaluation.md  proposal.html  store-schema.md
docs/plans/: substation-geometry-impl.md
docs/ppt/: index.html
docs/schema/: 0-sample-corpus.md  00-sample-corpus.md  01-gim-container-analysis.md  02-gim-file-inventory.md  README.md  (+44 more)
review/: review-report-0711.md  review-report-0712.md  review-report-0717.md  review0709.md
scripts/: copy-web-ifc-wasm.mjs  package-portable.mjs  prepare-webview2-fixed-runtime.mjs  tauri-wrapper.mjs  validate_gim.cjs  verify-line-graph.ts
src/: main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json  tauri.portable.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
(+127 files in other folders)
