[package]
name = "gim-viewer"
version = "0.0.1"
description = "GIM 阅读器"
authors = ["bamboosjtu"]
edition = "2021"

[lib]
name = "gim_viewer_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
